// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expanding property values should expand border-radius correctly 1`] = `
Object {
  "borderBottomLeftRadius": "1px",
  "borderBottomRightRadius": "1px",
  "borderTopLeftRadius": "1px",
  "borderTopRightRadius": "1px",
}
`;

exports[`Expanding property values should expand border-radius correctly 2`] = `
Object {
  "borderBottomLeftRadius": "2em",
  "borderBottomRightRadius": "1px",
  "borderTopLeftRadius": "1px",
  "borderTopRightRadius": "2em",
}
`;

exports[`Expanding property values should expand border-radius correctly 3`] = `
Object {
  "borderBottomLeftRadius": "2em",
  "borderBottomRightRadius": "3rem",
  "borderTopLeftRadius": "1px",
  "borderTopRightRadius": "2em",
}
`;

exports[`Expanding property values should expand border-radius correctly 4`] = `
Object {
  "borderBottomLeftRadius": "4ch",
  "borderBottomRightRadius": "3rem",
  "borderTopLeftRadius": "1px",
  "borderTopRightRadius": "2em",
}
`;

exports[`Expanding property values should expand border-radius correctly 5`] = `
Object {
  "borderBottomLeftRadius": "calc(var(--val, 0) + 1px / 1.1)",
  "borderBottomRightRadius": "1px",
  "borderTopLeftRadius": "1px",
  "borderTopRightRadius": "calc(var(--val, 0) + 1px / 1.1)",
}
`;

exports[`Expanding property values should expand border-radius correctly 6`] = `
Object {
  "borderBottomLeftRadius": "10px 20px",
  "borderBottomRightRadius": "10px 20px",
  "borderTopLeftRadius": "10px 20px",
  "borderTopRightRadius": "10px 20px",
}
`;

exports[`Expanding property values should expand border-radius correctly 7`] = `
Object {
  "borderBottomLeftRadius": "5% 30px",
  "borderBottomRightRadius": "10px 20px",
  "borderTopLeftRadius": "10px 20px",
  "borderTopRightRadius": "5% 30px",
}
`;

exports[`Expanding property values should expand border-radius correctly 8`] = `
Object {
  "borderBottomLeftRadius": "5px 25px",
  "borderBottomRightRadius": "2em 30%",
  "borderTopLeftRadius": "10px 20px",
  "borderTopRightRadius": "5px 25px",
}
`;

exports[`Expanding property values should expand border-radius correctly 9`] = `
Object {
  "borderBottomLeftRadius": "5% 35em",
  "borderBottomRightRadius": "10px 30px",
  "borderTopLeftRadius": "10px 20px",
  "borderTopRightRadius": "5% 25em",
}
`;

exports[`Expanding property values should expand borders/outline correctly 1`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "1px",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "1px",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "1px",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "1px",
}
`;

exports[`Expanding property values should expand borders/outline correctly 2`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "calc(10px + 1em)",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "calc(10px + 1em)",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "calc(10px + 1em)",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "calc(10px + 1em)",
}
`;

exports[`Expanding property values should expand borders/outline correctly 3`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "calc(var(--foo) + 1em)",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "calc(var(--foo) + 1em)",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "calc(var(--foo) + 1em)",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "calc(var(--foo) + 1em)",
}
`;

exports[`Expanding property values should expand borders/outline correctly 4`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "1px",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "1px",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "1px",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "1px",
}
`;

exports[`Expanding property values should expand borders/outline correctly 5`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "calc(10px + 1em)",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "calc(10px + 1em)",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "calc(10px + 1em)",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "calc(10px + 1em)",
}
`;

exports[`Expanding property values should expand borders/outline correctly 6`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "calc(var(--foo) + 1em)",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "calc(var(--foo) + 1em)",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "calc(var(--foo) + 1em)",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "calc(var(--foo) + 1em)",
}
`;

exports[`Expanding property values should expand borders/outline correctly 7`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "1px",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "1px",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "1px",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "1px",
}
`;

exports[`Expanding property values should expand borders/outline correctly 8`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "calc(10px + 1em)",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "calc(10px + 1em)",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "calc(10px + 1em)",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "calc(10px + 1em)",
}
`;

exports[`Expanding property values should expand borders/outline correctly 9`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "calc(var(--foo) + 1em)",
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "calc(var(--foo) + 1em)",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "calc(var(--foo) + 1em)",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "calc(var(--foo) + 1em)",
}
`;

exports[`Expanding property values should expand borders/outline correctly 10`] = `
Object {
  "borderLeftColor": "grey",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "1px",
}
`;

exports[`Expanding property values should expand borders/outline correctly 11`] = `
Object {
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "1px",
}
`;

exports[`Expanding property values should expand borders/outline correctly 12`] = `
Object {
  "borderBottomWidth": "3px",
  "borderLeftWidth": "2px",
  "borderRightWidth": "5px",
  "borderTopWidth": "1px",
}
`;

exports[`Expanding property values should expand borders/outline correctly 13`] = `
Object {
  "borderBottomWidth": "3px",
  "borderLeftWidth": "5px",
  "borderRightWidth": "5px",
  "borderTopWidth": "1px",
}
`;

exports[`Expanding property values should expand borders/outline correctly 14`] = `
Object {
  "outlineColor": "grey",
  "outlineStyle": "solid",
  "outlineWidth": "1px",
}
`;

exports[`Expanding property values should expand borders/outline correctly 15`] = `
Object {
  "outlineColor": "grey",
  "outlineStyle": "solid",
  "outlineWidth": "calc(100px + 1em)",
}
`;

exports[`Expanding property values should expand borders/outline correctly 16`] = `
Object {
  "outlineColor": "grey",
  "outlineStyle": "solid",
  "outlineWidth": "calc(100px + var(--foo))",
}
`;

exports[`Expanding property values should expand borders/outline correctly 17`] = `
Object {
  "borderLeftWidth": "0",
}
`;

exports[`Expanding property values should expand borders/outline correctly 18`] = `
Object {
  "borderLeftWidth": "calc(-1 * var(--bar))",
}
`;

exports[`Expanding property values should expand flex correctly 1`] = `
Object {
  "flexBasis": "auto",
  "flexGrow": "0",
  "flexShrink": "1",
}
`;

exports[`Expanding property values should expand flex correctly 2`] = `
Object {
  "flexBasis": "50%",
  "flexGrow": "2",
  "flexShrink": "1",
}
`;

exports[`Expanding property values should expand flex correctly 3`] = `
Object {
  "flexBasis": "20px",
  "flexGrow": "3",
  "flexShrink": "1",
}
`;

exports[`Expanding property values should expand flex correctly 4`] = `
Object {
  "flexBasis": "20px",
  "flexGrow": "3",
}
`;

exports[`Expanding property values should expand flex correctly 5`] = `
Object {
  "flexBasis": "20px",
  "flexGrow": "1",
}
`;

exports[`Expanding property values should expand flex correctly 6`] = `
Object {
  "flexBasis": "20px",
  "flexGrow": "1",
  "flexShrink": "0",
}
`;

exports[`Expanding property values should expand flex correctly 7`] = `
Object {
  "flexBasis": "20px",
  "flexGrow": "1",
  "flexShrink": "0",
}
`;

exports[`Expanding property values should expand flex correctly 8`] = `
Object {
  "flexBasis": "var(--foo)",
  "flexGrow": "1",
  "flexShrink": "2",
}
`;

exports[`Expanding property values should expand flex correctly 9`] = `
Object {
  "flexBasis": "calc(100% - var(--bar))",
  "flexGrow": "1",
  "flexShrink": "2",
}
`;

exports[`Expanding property values should expand padding/margin correctly 1`] = `
Object {
  "paddingBottom": "5px",
  "paddingLeft": "10px",
  "paddingRight": "20px",
  "paddingTop": "15px",
}
`;

exports[`Expanding property values should expand padding/margin correctly 2`] = `
Object {
  "paddingBottom": "5px",
  "paddingLeft": "20px",
  "paddingRight": "20px",
  "paddingTop": "15px",
}
`;

exports[`Expanding property values should expand padding/margin correctly 3`] = `
Object {
  "paddingBottom": "15px",
  "paddingLeft": "20px",
  "paddingRight": "20px",
  "paddingTop": "15px",
}
`;

exports[`Expanding property values should expand padding/margin correctly 4`] = `
Object {
  "paddingBottom": "15px",
  "paddingLeft": "15px",
  "paddingRight": "15px",
  "paddingTop": "15px",
}
`;

exports[`Expanding property values should expand padding/margin correctly 5`] = `
Object {
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
}
`;

exports[`Expanding property values should expand padding/margin correctly 6`] = `
Object {
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
}
`;

exports[`Expanding property values should expand padding/margin correctly 7`] = `
Object {
  "marginBottom": "5px",
  "marginLeft": "10px",
  "marginRight": "20px",
  "marginTop": "15px",
}
`;

exports[`Expanding property values should expand padding/margin correctly 8`] = `
Object {
  "paddingBottom": "calc(100% - 5px)",
  "paddingLeft": "10px",
  "paddingRight": "10px",
  "paddingTop": "calc(20px - 15px)",
}
`;

exports[`Expanding property values should expand padding/margin correctly 9`] = `
Object {
  "marginBottom": "5px",
  "marginLeft": "var(--bar)",
  "marginRight": "var(--foo)",
  "marginTop": "15px",
}
`;

exports[`Expanding property values should expand padding/margin correctly 10`] = `
Object {
  "paddingBottom": "5px",
  "paddingLeft": "calc(10px + var(--bar))",
  "paddingRight": "calc(1em * var(--foo))",
  "paddingTop": "15px",
}
`;

exports[`Expanding property values should expand padding/margin correctly 11`] = `
Object {
  "paddingBottom": "5px",
  "paddingLeft": "calc(10px + (var(--bar) +      4em     ))",
  "paddingRight": "calc(1em * (2 * var(--foo)))",
  "paddingTop": "15px",
}
`;
